modified:add '-DNOMINMAX' for MSVC   CMakeLists.txt 	modified:update to new EGE version   EGE/ege.h 	deleted:unnecessary packing header    EGE/graphics.h 	new file:for MSVC   EGE/graphics.lib 	new file:update to new EGE version   EGE/libgraphics.a 	deleted:outdated    EGE/libgraphics64.a 	modified:little adjustment   src/main.cpp 	modified:little adjustment   src/v3D.cpp 	modified:little adjustment   src/v3D.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(v3D)
-set(CMAKE_CXX_FLAGS"-std=c++23 -Wall")
+set(CMAKE_CXX_FLAGS"-std=c++20 -Wall -mwindows -DNOMINMAX")
 set(CMAKE_CXX_FLAGS_RELEASE"-O3")
 link_directories(${PROJECT_SOURCE_DIR}/EGE)
 include_directories(${PROJECT_SOURCE_DIR})
 add_executable(v3D src/main.cpp src/v3D.cpp)
-target_link_libraries(v3D libgraphics64.a libgdiplus.a libuuid.a libmsimg32.a libgdi32.a libimm32.a libole32.a liboleaut32.a libwinmm.a)
+target_link_libraries(v3D graphics gdiplus gdi32)
