modified:Modified library directory.   CMakeLists.txt 	renamed:Modified library directory.    EGE/ege.h -> lib/ege.h 	renamed:Modified library directory.    EGE/graphics.lib -> lib/graphics.lib 	renamed:Modified library directory.    EGE/libgraphics.a -> lib/libgraphics.a 	modified:   src/main.cpp 	modified:Be able to render on a specific PIMAGE   src/v3D.cpp 	modified:Completed writing Doxygen comments   src/v3D.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.5.0)
 project(v3D)
 set(CMAKE_CXX_FLAGS"-std=c++20 -Wall -mwindows -DNOMINMAX")
 set(CMAKE_CXX_FLAGS_RELEASE"-O3")
-link_directories(${PROJECT_SOURCE_DIR}/EGE)
+link_directories(${PROJECT_SOURCE_DIR}/lib)
 include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/lib)
 add_executable(v3D src/main.cpp src/v3D.cpp)
 target_link_libraries(v3D graphics gdiplus gdi32)
