--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,4 +1,3 @@
 cmake_minimum_required(VERSION 3.10)
 project(v3d-demo)
-set(CMAKE_CXX_FLAGS_RELEASE"${CMAKE_CXX_FLAGS_RELEASE} -O3")
-add_executable(v3d-demo src/main.cpp)
+add_executable(v3d-demo src/main.cc)
